--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 unicue
                 taste.</p>
             <!-- Block with images and text -->
-            <div class="products"">
+            <div class="products">
                 <p>new arrivals</p>
                 <div class=" arrivals">
                 <div class="arrivals__item item1">
